# autogroceries

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: test_deploy.yml
src/autogroceries/: cli.py  exceptions.py  models.py  storage.py
src/autogroceries/planner/: consolidator.py  planner.py
src/autogroceries/recommender/: engine.py  history.py  scoring.py  seasonal.py
src/autogroceries/scheduler/: reminders.py  scheduler.py
src/autogroceries/scraper/: base.py  exa_scraper.py  firecrawl_scraper.py  ingredient_parser.py  mobkitchen.py  sainsburys_recipes.py  universal.py  waitrose_recipes.py
src/autogroceries/shopper/: sainsburys.py
src/autogroceries/web/: app.py  schemas.py
tests/: test_cli.py  test_models.py  test_scheduler.py  test_storage.py  test_web.py
tests/test_planner/: test_consolidator.py  test_planner.py
tests/test_recommender/: test_engine.py  test_history.py  test_seasonal.py
tests/test_scraper/: test_exa_scraper.py  test_firecrawl_scraper.py  test_ingredient_parser.py  test_universal.py
