[project]
name = "autogroceries"
version = "2.2.4"
description = "Automate your grocery shop."
authors = [
    { name = "David Zhang" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "click==8.2.1",
    "playwright==1.54.0",
    "python-dotenv==1.1.1",
    "recipe-scrapers>=15.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]
ai = [
    "firecrawl-py>=1.0",
    "exa-py>=1.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.18",
    "mkdocstrings[python]==0.30.0",
]
build = [
    "build==1.3.0",
]

[project.scripts]
autogroceries = "autogroceries.cli:autogroceries_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
